// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-template Renders \`field-template\` with custom props 1`] = `
<div
  class="container pa-3 container--fluid"
>
  <div
    class="layout align-center justify-space-between"
  >
    <div
      class="text-subtitle-1"
    >
      Custom title
    </div>
    <button
      class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--small"
      type="button"
    >
      <span
        class="v-btn__content"
      >
      Show/Edit
      </span>
    </button>
  </div>
</div>
`;

exports[`field-template Renders \`field-template\` with required props 1`] = `
<div
  class="container pa-3 container--fluid"
>
  <div
    class="layout align-center justify-space-between"
  >
    <div
      class="text-subtitle-1"
    >
      Custom required title
    </div>
    <button
      class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--small"
      type="button"
    >
      <span
        class="v-btn__content"
      >
      Show/Edit
      </span>
    </button>
  </div>
</div>
`;
